# rust-2048

./: Cargo.toml
src/: app.rs  board.rs  main.rs  number_renderer.rs  settings.rs  tile.rs
