[package]

name = "rust-2048"
version = "0.0.0"
authors = ["coeuvre <coeuvre@gmail.com>"]

[[bin]]

name = "rust-2048"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.0"
piston_window = "0.117.0"
pistoncore-sdl2_window = "0.67.0"
piston2d-opengl_graphics = "0.77.0"
